# legend-pygeom-optics

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: distribution.yml  main.yml
docs/: Makefile
docs/source/: .py_api_exclude  conf.py  index.md  index.rst  user_guide.md
docs/source/_assets/: redirect.html
docs/source/exts/: optics_plot_extension.py
src/legend_optics/: __init__.py  fibers.py  lar.py  plot.py  tetratex.py  tpb.py  utils.py
src/legendoptics/: __init__.py  _version.py  cli.py  copper.py  fibers.py  germanium.py  lar.py  nylon.py  pen.py  plot.py  pmts.py  pyg4utils.py  scintillate.py  silica.py  silicon.py  store.py  tetratex.py  tpb.py  tyvek.py  ultem.py  utils.py  vm2000.py  water.py
src/pygeomoptics/: __init__.py  cli.py  copper.py  fibers.py  germanium.py  lar.py  nylon.py  pen.py  plot.py  pmts.py  pyg4utils.py  scintillate.py  silica.py  silicon.py  steel.py  store.py  tantalum.py  tetratex.py  tpb.py  tyvek.py  ultem.py  utils.py  vm2000.py  water.py
tests/: test_core.py  test_data_file_read.py  test_g4gps.py  test_import.py  test_lar.py  test_plot.py  test_pyg4.py  test_scintillate.py  test_store.py
tests/test_cfg/: matprop_change.py
