[metadata]
name = legend_optics
description = Optical physics in LEGEND
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gipert/legend-optics
author = Manuel Huber
maintainer = The LEGEND collaboration
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
packages = find:
install_requires =
    pyg4ometry@git+https://bitbucket.org/jairhul/pyg4ometry@91d922e#egg=pyg4ometry
python_requires = >=3.7
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
docs =
    jupyter
    myst-parser
    sphinx
    sphinx-copybutton
    sphinx-multiversion-pre-post-build>=0.2.4
    sphinx-rtd-theme
test =
    pre-commit
    pytest>=6.0
    pytest-cov

[options.package_data]
legend_optics = src/legend_optics/data/*.csv

[flake8]
extend-ignore = E203, E501
