[metadata]
name = legend_pygeom_optics
version = attr: legendoptics._version.version
description = Optical properties of the LEGEND experiment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/legend-exp/legend-pygeom-optics
author = Luigi Pertoldi
author_email = gipert@pm.me
maintainer = The LEGEND Collaboration
license = GPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
packages = find:
install_requires =
    importlib-resources
    matplotlib
    numpy
    pint
    pyg4ometry
    scipy
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
all =
    legend-pygeom-optics[docs,test]
docs =
    furo
    myst-parser
    sphinx>=7.2.2
    sphinx-copybutton
test =
    pre-commit
    pytest>=6.0
    pytest-cov

[options.package_data]
legendoptics = src/legendoptics/data/*.dat

[flake8]
extend-ignore = E203, E501, D10
